--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "@fortawesome/fontawesome-svg-core": "^6.2.1",
         "@fortawesome/free-brands-svg-icons": "^6.2.1",
         "@fortawesome/free-solid-svg-icons": "^6.2.1",
+        "@tinymce/tinymce-vue": "^5.0.0",
         "@vitejs/plugin-vue": "^4.0.0",
         "autoprefixer": "^10.4.13",
         "sass": "^1.57.1",
