--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
         "sass": "^1.57.1",
         "sass-loader": "^13.2.0",
         "tailwindcss": "^3.2.4",
-        "vue": "^3.2.45"
+        "vue": "^3.2.45",
+        "vue-draggable-next": "^2.1.1",
+        "vue3-draggable": "^2.0.9"
     }
 }
