--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "scripts": {
         "dev": "vite",
         "build": "vite build",
-        "lint":  "vite build"
+        "lint": "vite build"
     },
     "devDependencies": {
         "axios": "^1.6.7",
@@ -19,11 +19,11 @@
         "@tinymce/tinymce-vue": "^5.1.1",
         "@vitejs/plugin-vue": "^4.6.2",
         "autoprefixer": "^10.4.17",
+        "rellax": "^1.12.1",
         "sass": "^1.70.0",
         "sass-loader": "^14.1.0",
         "tailwindcss": "^3.4.1",
         "vue": "^3.4.18",
-        "vue-draggable-next": "^2.2.1",
-        "vue3-draggable": "^2.0.9"
+        "vue-draggable-next": "^2.2.1"
     }
 }
