--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "sass": "^1.75.0",
         "sass-loader": "^14.2.1",
         "tailwindcss": "^3.4.3",
+        "vanilla-cookieconsent": "^3.0.1",
         "vue": "^3.4.26",
         "vue-draggable-next": "^2.2.1"
     }
