--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
         "lint": "vite build"
     },
     "devDependencies": {
+        "@tailwindcss/typography": "^0.5.13",
         "axios": "^1.6.8",
         "laravel-vite-plugin": "^0.8.1",
         "lodash": "^4.17.19",
