--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
         "@fortawesome/fontawesome-svg-core": "^6.5.2",
         "@fortawesome/free-brands-svg-icons": "^6.5.2",
         "@fortawesome/free-solid-svg-icons": "^6.5.2",
-        "@tinymce/tinymce-vue": "^5.1.1",
         "@vitejs/plugin-vue": "^4.6.2",
         "autoprefixer": "^10.4.19",
+        "quill": "^2.0.2",
         "rellax": "^1.12.1",
         "sass": "^1.76.0",
         "sass-loader": "^14.2.1",
